# KMS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  _tmp_query.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: INSTALL.md  UPGRADE.md  USAGE.md  anythingllm-workspace.md  architecture-decisions.md  architecture.md  cli.md  conference-demo.md  continuity.md  docker-setup.md  gateway.md  history.md  kms-principles.md  testing-baseline.md  workflow.md
docs/adr/: ADR-001-sqlite-vs-postgres.md  ADR-002-markdown-review-vs-web-ui.md  ADR-003-anythingllm-vs-custom-rag.md  ADR-004-source-notes-for-pdfs.md  ADR-005-gateway-deferred.md  ADR-006-human-in-the-loop.md  ADR-007-idempotent-apply.md  ADR-008-canonical-knowledge-boundary.md  ADR-009-pdf-conversion-stack.md  ADR-010-llm-triage-provider-strategy.md  README.md
example-vault/: .gitignore  README.md
example-vault/.obsidian/: community-plugins.json  graph.json  workspace.json
kms/: __init__.py
scripts/: generate_cpp_corpus.py  generate_knowledge_seed.py  ingest_conversations.py  release-plugin.sh  setup.sh
tests/: conftest.py  test_anythingllm_client.py  test_cli_scripts.py  test_config.py  test_db.py  test_execution_snapshot.py  test_gateway.py  test_hashing.py  test_ingest_conversations.py  test_lifecycle.py  test_llm_client.py  test_llm_triage_contract.py  test_merge_advisor.py  test_pdf_conversion_smoke.py  test_pdf_transcript_score.py  test_revert_apply.py  test_review_queue.py  test_smoke_pipeline.py
(+109 files in other folders)
